css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

ol, ul {
	list-style: none;
}


* {
    box-sizing: border-box;
}

html, body {
    /* height: 100%; */
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}

html {
    background-color: black;
}
body {
    height: 100%;
    background-color: snow;
	line-height: 1; 
    max-width: 90%; 
    margin:  2% 5%; 
}

.navBar {
   width: 90%;
    display: flex;
    justify-content: space-around;
    align-items: center; 
    padding: 20px 2%;
    
}
header a {
    
    width:60%;
    text-decoration: none;
    justify-content: space-between;
    align-items:center;   
}


.logo {
    margin: 0 4.95%;
    justify-content: flex-start;
    align-items:center;   
}






header img {
    width: 90%;
    margin: 2% 5%;
  
}
 



.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 2% 5%;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

.middle-content .boxes {
    margin: 2% 5%;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

 .box1 {
    background-color: teal;
}
.box2 {
    background-color: gold;
} 
.box3{
    background-color: cadetblue;

}
.box4 {
    background-color: coral;
}

.box5 {
    background-color: crimson;
}

.box6 {
    background-color: forestgreen;
}

.box7 {
    background-color: darkorchid;

}

.box8 {
    background-color: hotpink;
}

.box9{
    background-color: indigo;
}

.box10 {
    background-color: dodgerblue;
}


.middle-content .boxes .box {
    width: 12.5%;
    height: 100px;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.bottom-content {
    display: flex;
    margin: 2% 5%;

    /* margin: 0 2% 20px; */
    justify-content: space-between;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}

footer {
    margin-left: 10%;
    padding-bottom: 0% auto;
    width: 80%;
    background: black;
}

footer nav {
    
    display: flex;
    justify-content: space-between;
    align-items: center; 
   
    padding: 20px ;
    font-size: 14px;
}

nav {
  justify-content: center;
  align-items: center;
}

footer nav a {
    color: whitesmoke;
    text-decoration: none;
    align-items:center;
    margin-top: 2%; 
    padding-top: 2%;  
}



/* About Page */

 .about-page {
    display: flex;
    flex-direction: column;
  
    /* padding-left: 5%; */
}
.text {
    margin: 3% 5%;
    padding: 5px;
    border-bottom: 2px dotted black;
    
}



/* .contentBox img  {
    margin: .5%;
    justify-content: space-between;
    flex-wrap: wrap;
    
} */

.contentBox .info  {
    display: flex;
    flex-direction: row ;
    /* flex-direction: row; */
    
}

.info {
  margin: 5% 10%;
  flex-wrap: wrap;
  justify-content: space-around;
 
   
} 
p{
    color:black;
}

